# ecuc-configurator

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
examples/: README.md
examples/data/dbc/: ECM_PMBD_FD16_2025-34_LB-WL_PRS_Release.dbc  ECM_PMBD_FD3_2025-34_LB-WL_PRS_Release_v2.dbc  S_JL26_JT26_E3A_CCAN_2025-31_PRS_Release_ECM_PMBD_v2.dbc
examples/data/ldf/: HDCC27_E1A_R1_ECM_GAS_DSL_LIN1.ldf  HDCC27_E1A_R2_ECM_GAS_LIN2.ldf
examples/data/xlsx/: CAN_ECM_FD16.xlsx  CAN_ECM_FD3.xlsx
examples/dbc/: ECM_PMBD_FD14_2025-34_LB-WL_PRS_Release.dbc  PLB26_E3A_R2_CCAN12.dbc
examples/ldf/: ECM_GAS_LIN_1b_2329_PT_Release.ldf
examples/output/: BodyECU_Config.arxml  PowertrainECU_AR45.arxml
examples/xlsx/: CAN_ECM_FD14.xlsx
src/autosar/: __init__.py
src/autosar/generator/: __init__.py  ecuc_generator.py
src/autosar/loader/: README.md  XLSX_LOADER.md  __init__.py  base_loader.py  complete_xlsx_loader.py  dbc_loader.py  ldf_loader.py  xlsx_loader.py
src/autosar/model/: README.md  __init__.py  autosar_model.py  base.py  can_model.py  ecu_model.py  ecuc_model.py  lin_model.py  types.py  xlsx_complete_model.py  xlsx_model.py
src/autosar/service/: README.md  __init__.py  ecuc_service.py
tests/: README.md  test_loader_ldf.py
tests/demo/: README.md  demo_complete_xlsx.py  demo_ecuc_generation.py  demo_load_xlsx.py  demo_xlsx_models.py
tests/integration/: test_complete_xlsx_loader.py
tests/scenario/: __init__.py  test_autosar_config_generation.py  test_data_validation_qa.py
tests/unit/: test_column_mappings.py  test_complete_xlsx_models.py
tests/unit/legacy/: README.md  test_loader_dbc.py  test_loader_xlsx.py  test_models.py  (+2 more)
